[tool.poetry]
name = "linkedin-scrapper"
version = "0.1.0"
description = "Short description."
authors = ["Tamiris Crepalde <tamiriscrepaldemartins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
jupyter-summarytools = "^0.2.3"
ipykernel = "^6.29.4"
jupyterlab = "^4.1.6"
